# regex-grep

./: CMakeLists.txt  README.md  RegexLogExxtract.slnx  vcpkg.json
.github/workflows/: release.yml
RegexLogExxtract/: .editorconfig  RegexLogExxtract.vcxproj  RegexLogExxtract.vcxproj.filters
RegexLogExxtract/include/common/: string.h
RegexLogExxtract/src/: main.cpp  regex_log_extractor.cpp  regex_log_extractor.h
include/: regex_grep.hpp  string.hpp
src/: CMakeLists.txt  main.cpp  regex_grep.cpp
test/: dummy_log.txt  generator_dummy_log.py
